--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <span class="section__subtitle">My Portfolio</span>
             <h2 class="section__title">Recent Works</h2>
             <div class="work__filters">
-                <span class="work__item">All</span>
+                <span class="work__item active-work">All</span>
                 <span class="work__item">Web</span>
                 <span class="work__item">Software</span>
                 <span class="work__item">Design</span>
