--- a/index.html
+++ b/index.html
@@ -502,13 +502,13 @@
             <span class="section__subtitle">My Portfolio</span>
             <h2 class="section__title">Recent Works</h2>
             <div class="work__filters">
-                <span class="work__item active-work">All</span>
-                <span class="work__item">Web</span>
-                <span class="work__item">Software</span>
-                <span class="work__item">Design</span>
+                <span class="work__item active-work" data-filter='all' >All</span>
+                <span class="work__item" data-filter='.web'>Web</span>
+                <span class="work__item" data-filter='.movil'>Software</span>
+                <span class="work__item" data-filter='.design'>Design</span>
             </div>
             <div class="work__container container grid">
-                <div class="work__card">
+                <div class="work__card mix">
                     <img src="./assets/img/w1.png" alt="" class="work__img">
                     <h3 class="work__title">Bank Locker Service</h3>
                     <a href="https://github.com/radwanromy/LS-FE-ANGULAR" class="work__button">
@@ -516,7 +516,7 @@
                     </a>
                 </div>
 
-                <div class="work__card">
+                <div class="work__card mix">
                     <img src="./assets/img/w2.png" alt="" class="work__img">
                     <h3 class="work__title">
 
@@ -527,7 +527,7 @@
                     </a>
                 </div>
 
-                <div class="work__card">
+                <div class="work__card mix">
                     <img src="./assets/img/w3.png" alt="" class="work__img">
                     <h3 class="work__title">Blockchain Application Web-3.0</h3>
                     <a href="https://github.com/radwanromy/Blockchain-Application-Web-3.0-React-Solidity" class="work__button">
@@ -535,7 +535,7 @@
                     </a>
                 </div>
 
-                <div class="work__card">
+                <div class="work__card mix">
                     <img src="./assets/img/w4.png" alt="" class="work__img">
                     <h3 class="work__title">Upwork-Sizzle Blog</h3>
                     <a href="https://github.com/radwanromy/Sizzle.gg-Blog-Code-Up-Work" class="work__button">
@@ -543,7 +543,7 @@
                     </a>
                 </div>
 
-                <div class="work__card">
+                <div class="work__card mix">
                     <img src="./assets/img/w9.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Three.js WebGL 3D website</h3>
@@ -552,7 +552,7 @@
                     </a>
                 </div>
 
-                <div class="work__card">
+                <div class="work__card mix">
                     <img src="./assets/img/w10.png" alt="" class="work__img">
                     <h3 class="work__title">
                         AIUB Cyber Gaming Fest 2019</h3>
@@ -618,7 +618,7 @@
     <script src=""></script>
 
     <!--=============== MIXITUP FILTER ===============-->
-    <script src=""></script>
+    <script src="assets/js/mixitup.min.js"></script>
 
     <!--=============== MAIN JS ===============-->
     <script src="assets/js/main.js"></script>
