--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                 <span class="work__item" data-filter='.design'>Design</span>
             </div>
             <div class="work__container container grid">
-                <div class="work__card mix">
+                <div class="work__card mix movil">
                     <img src="./assets/img/w1.png" alt="" class="work__img">
                     <h3 class="work__title">Bank Locker Service</h3>
                     <a href="https://github.com/radwanromy/LS-FE-ANGULAR" class="work__button">
@@ -516,7 +516,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix">
+                <div class="work__card mix movil">
                     <img src="./assets/img/w2.png" alt="" class="work__img">
                     <h3 class="work__title">
 
@@ -527,7 +527,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix">
+                <div class="work__card mix web">
                     <img src="./assets/img/w3.png" alt="" class="work__img">
                     <h3 class="work__title">Blockchain Application Web-3.0</h3>
                     <a href="https://github.com/radwanromy/Blockchain-Application-Web-3.0-React-Solidity" class="work__button">
@@ -535,7 +535,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix">
+                <div class="work__card mix web">
                     <img src="./assets/img/w4.png" alt="" class="work__img">
                     <h3 class="work__title">Upwork-Sizzle Blog</h3>
                     <a href="https://github.com/radwanromy/Sizzle.gg-Blog-Code-Up-Work" class="work__button">
@@ -543,7 +543,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix">
+                <div class="work__card mix web">
                     <img src="./assets/img/w9.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Three.js WebGL 3D website</h3>
@@ -552,7 +552,7 @@
                     </a>
                 </div>
 
-                <div class="work__card mix">
+                <div class="work__card mix web">
                     <img src="./assets/img/w10.png" alt="" class="work__img">
                     <h3 class="work__title">
                         AIUB Cyber Gaming Fest 2019</h3>
@@ -562,7 +562,7 @@
                 </div>
 
 
-                <div class="work__card">
+                <div class="work__card web">
                     <img src="./assets/img/w11.png" alt="" class="work__img">
                     <h3 class="work__title">
                         JARVIS 2.0 INTRA ACC CARNIVAL</h3>
@@ -572,7 +572,7 @@
                 </div>
 
 
-                <div class="work__card">
+                <div class="work__card web">
                     <img src="./assets/img/w12.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Crystal Community Center</h3>
