--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
             <span class="section__subtitle">My Portfolio</span>
             <h2 class="section__title">Recent Works</h2>
             <div class="work__filters">
-                <span class="work__item active-work" data-filter='all' >All</span>
+                <span class="work__item active-work" data-filter='all'>All</span>
                 <span class="work__item" data-filter='.web'>Web</span>
                 <span class="work__item" data-filter='.movil'>Software</span>
                 <span class="work__item" data-filter='.design'>Design</span>
@@ -530,7 +530,8 @@
                 <div class="work__card mix web">
                     <img src="./assets/img/w3.png" alt="" class="work__img">
                     <h3 class="work__title">Blockchain Application Web-3.0</h3>
-                    <a href="https://github.com/radwanromy/Blockchain-Application-Web-3.0-React-Solidity" class="work__button">
+                    <a href="https://github.com/radwanromy/Blockchain-Application-Web-3.0-React-Solidity"
+                        class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -547,7 +548,8 @@
                     <img src="./assets/img/w9.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Three.js WebGL 3D website</h3>
-                    <a href="https://github.com/radwanromy/Three.js-WebGL-3D-website-project-By-A_S_M_Radwan" class="work__button">
+                    <a href="https://github.com/radwanromy/Three.js-WebGL-3D-website-project-By-A_S_M_Radwan"
+                        class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -562,7 +564,7 @@
                 </div>
 
 
-                <div class="work__card web">
+                <div class="work__card mix web">
                     <img src="./assets/img/w11.png" alt="" class="work__img">
                     <h3 class="work__title">
                         JARVIS 2.0 INTRA ACC CARNIVAL</h3>
@@ -572,7 +574,7 @@
                 </div>
 
 
-                <div class="work__card web">
+                <div class="work__card mix web">
                     <img src="./assets/img/w12.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Crystal Community Center</h3>
@@ -582,11 +584,12 @@
                 </div>
 
 
-                <div class="work__card">
+                <div class="work__card mix web">
                     <img src="./assets/img/w9.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Three.js WebGL 3D websitee</h3>
-                    <a href="https://github.com/radwanromy/Three.js-WebGL-3D-website-project-By-A_S_M_Radwan" class="work__button">
+                    <a href="https://github.com/radwanromy/Three.js-WebGL-3D-website-project-By-A_S_M_Radwan"
+                        class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -594,7 +597,7 @@
 
             </div>
         </section>
-<!-- 1.12.17 -->
+        <!-- 1.12.17 -->
         <!--=============== TESTIMONIALS ===============-->
         <section class="testimonial section">
 
