--- a/index.html
+++ b/index.html
@@ -600,7 +600,53 @@
         <!-- 1.12.17 -->
         <!--=============== TESTIMONIALS ===============-->
         <section class="testimonial section">
+            <span class="section__subtitle">クライアントのフィードバック</span>
+            <h2 class="section__title">推薦状</h2>
 
+            <div class="testimonial__container container">
+                <div>
+
+                    <div class="testimonial__card">
+                        <img src="assets/img/vvvvCapture.png" alt="" class="testimonial__img">
+                        <h3 class="testimonial__name"><a
+                                href="https://www.crunchbase.com/person/vijay-koduri?fbclid=IwAR1pfAqjUTZKjmp9lEmneWeZMpuC19Dg9ZGps2Nvt_j3JHbkarDf8btQ5Fs">Vijay
+                                Koduri</a>,Co-Founder of <a
+                                href="https://www.crunchbase.com/organization/sizzle-a845">Sizzle</a> ,USA </h3>
+                        <p class="testimonial__description">本当に優秀なフリーランサーであり、プロジェクトのすべての側面が段階的に実行され、予想よりも優れた良い結果が得られました。
+                            A really good freelancer, All aspects pf the project were
+                            followed step by step and with good result which is better than expectation.
+                        </p>
+
+                    </div>
+
+                    <div class="testimonial__card">
+                        <img src="assets/img/1648100370466 - Copy.jfif" alt="" class="testimonial__img">
+                        <h3 class="testimonial__name">Plabon Kumar Saha, 
+                            Software Engineer-BRAC IT, <a href="Plabon.kumar@bracits.com">Email</a> </h3>
+                        <p class="testimonial__description">
+                            私は彼が熱心で素早い学習者であることに気づきました。 彼は優れたデザインセンスを持ち、ソフトウェアエンジニアリングとプログラミング言語の基礎を持っており、概念は非常に明確です。I found him to be eager and quick learner. He has good design sense and his basics in software engineering and programming languages, concepts are quite clear.</p>
+
+                    </div>
+
+                    <div class="testimonial__card">
+                        <img src="assets/img/dfsg85104924_178056013513943_2037466574654275584_n.jpg" alt="" class="testimonial__img">
+                        <h3 class="testimonial__name">Dr. Mohammad Ruman, MBBS, MS</h3>
+                        <p class="testimonial__description">
+                            彼は私のウェブサイトのいくつかで働いていました。 彼は才能があり経験豊富なWeb開発者です。 彼は仕事がとても上手です。He had worked for some of my websites. He is a talented and experienced web developer. He is very good at his job.
+                        </p>
+
+                    </div>
+                    
+                    <div class="testimonial__card">
+                        <img src="" alt="" class="testimonial__img">
+                        <h3 class="testimonial__name">xyz</h3>
+                        <p class="testimonial__description">XYZ
+                        </p>
+
+                    </div>
+                </div>
+
+            </div>
         </section>
 
         <!--=============== CONTACT ===============-->
