--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <!--=============== SWIPER CSS ===============-->
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/assets/css/swiper-bundle.min.css">
 
     <!--=============== CSS ===============-->
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -621,22 +621,26 @@
 
                     <div class="testimonial__card">
                         <img src="assets/img/1648100370466 - Copy.jfif" alt="" class="testimonial__img">
-                        <h3 class="testimonial__name">Plabon Kumar Saha, 
+                        <h3 class="testimonial__name">Plabon Kumar Saha,
                             Software Engineer-BRAC IT, <a href="Plabon.kumar@bracits.com">Email</a> </h3>
                         <p class="testimonial__description">
-                            私は彼が熱心で素早い学習者であることに気づきました。 彼は優れたデザインセンスを持ち、ソフトウェアエンジニアリングとプログラミング言語の基礎を持っており、概念は非常に明確です。I found him to be eager and quick learner. He has good design sense and his basics in software engineering and programming languages, concepts are quite clear.</p>
+                            私は彼が熱心で素早い学習者であることに気づきました。 彼は優れたデザインセンスを持ち、ソフトウェアエンジニアリングとプログラミング言語の基礎を持っており、概念は非常に明確です。I
+                            found him to be eager and quick learner. He has good design sense and his basics in software
+                            engineering and programming languages, concepts are quite clear.</p>
 
                     </div>
 
                     <div class="testimonial__card">
-                        <img src="assets/img/dfsg85104924_178056013513943_2037466574654275584_n.jpg" alt="" class="testimonial__img">
+                        <img src="assets/img/dfsg85104924_178056013513943_2037466574654275584_n.jpg" alt=""
+                            class="testimonial__img">
                         <h3 class="testimonial__name">Dr. Mohammad Ruman, MBBS, MS</h3>
                         <p class="testimonial__description">
-                            彼は私のウェブサイトのいくつかで働いていました。 彼は才能があり経験豊富なWeb開発者です。 彼は仕事がとても上手です。He had worked for some of my websites. He is a talented and experienced web developer. He is very good at his job.
+                            彼は私のウェブサイトのいくつかで働いていました。 彼は才能があり経験豊富なWeb開発者です。 彼は仕事がとても上手です。He had worked for some of my
+                            websites. He is a talented and experienced web developer. He is very good at his job.
                         </p>
 
                     </div>
-                    
+
                     <div class="testimonial__card">
                         <img src="" alt="" class="testimonial__img">
                         <h3 class="testimonial__name">xyz</h3>
@@ -664,7 +668,7 @@
     <script src=""></script>
 
     <!--=============== SWIPER JS ===============-->
-    <script src=""></script>
+    <script src="/assets/js/swiper-bundle.min.js"></script>
 
     <!--=============== MIXITUP FILTER ===============-->
     <script src="assets/js/mixitup.min.js"></script>
