--- a/index.html
+++ b/index.html
@@ -603,10 +603,10 @@
             <span class="section__subtitle">クライアントのフィードバック</span>
             <h2 class="section__title">推薦状</h2>
 
-            <div class="testimonial__container container">
-                <div>
+            <div class="testimonial__container container swiper">
+                <div class="swiper-wrapper">
 
-                    <div class="testimonial__card">
+                    <div class="testimonial__card swiper-slide">
                         <img src="assets/img/vvvvCapture.png" alt="" class="testimonial__img">
                         <h3 class="testimonial__name"><a
                                 href="https://www.crunchbase.com/person/vijay-koduri?fbclid=IwAR1pfAqjUTZKjmp9lEmneWeZMpuC19Dg9ZGps2Nvt_j3JHbkarDf8btQ5Fs">Vijay
@@ -619,7 +619,7 @@
 
                     </div>
 
-                    <div class="testimonial__card">
+                    <div class="testimonial__card swiper-slide">
                         <img src="assets/img/1648100370466 - Copy.jfif" alt="" class="testimonial__img">
                         <h3 class="testimonial__name">Plabon Kumar Saha,
                             Software Engineer-BRAC IT, <a href="Plabon.kumar@bracits.com">Email</a> </h3>
@@ -630,7 +630,7 @@
 
                     </div>
 
-                    <div class="testimonial__card">
+                    <div class="testimonial__card swiper-slide">
                         <img src="assets/img/dfsg85104924_178056013513943_2037466574654275584_n.jpg" alt=""
                             class="testimonial__img">
                         <h3 class="testimonial__name">Dr. Mohammad Ruman, MBBS, MS</h3>
@@ -641,7 +641,7 @@
 
                     </div>
 
-                    <div class="testimonial__card">
+                    <div class="testimonial__card swiper-slide">
                         <img src="" alt="" class="testimonial__img">
                         <h3 class="testimonial__name">xyz</h3>
                         <p class="testimonial__description">XYZ
