--- a/index.html
+++ b/index.html
@@ -649,6 +649,8 @@
 
                     </div>
                 </div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
 
             </div>
         </section>
