--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <div class="home__data">
 
                     <span class="home__greeting">もしもし</span>
-                    <h1 class="home__name">エー エス エム レードワン</h1>
-                    <h3 class="home__education">フルスタックエンジニア</h3>
+                    <h1 class="home__name">私の名前はエー エス エム レードワンです。</h1>
+                    <h3 class="home__education">私はフルスタックエンジニアです。</h3>
                     <div class="home__buttons">
 
                         <a download="" href="assets/pdf/A. S. M. Radwan.pdf" class="button button--ghost"> ダウンロード
