--- a/index.html
+++ b/index.html
@@ -657,7 +657,22 @@
 
         <!--=============== CONTACT ===============-->
         <section class="contact section" id="contact">
+            <span class="section__subtitle">お問い合わせ先</span>
+            <h2 class="section__title">連絡先</h2>
 
+            <div class="contact__container container grid">
+                <div class="contact__content">
+                    <h3 class="contact__title">Talk to me</h3>
+                    <div class="contact__info">
+
+                    </div>
+                </div>
+                <div class="contact__content">
+                    <h3 class="contact__title">Write me your project</h3>
+
+
+                </div>
+            </div>
         </section>
     </main>
 
