--- a/index.html
+++ b/index.html
@@ -669,27 +669,27 @@
                             <h3 class="contact__card-title">Email</h3>
                             <span class="contact__card-data">user@gmail.com</span>
 
-                            <a href="" target="_blank" class="contact__button">
+                            <a href="mailto:examplemail@correo.com" target="_blank" class="contact__button">
                                 Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bx-mail-send contact__card-icon'></i>
+                            <i class='bx bxl-messenger contact__card-icon' ></i>
                             <h3 class="contact__card-title">Messenger</h3>
-                            <span class="contact__card-data">https://m.me/radwan.romy.100</span>
+                            <span class="contact__card-data">Radwan Romy</span>
 
-                            <a href="" target="_blank" class="contact__button">
+                            <a href="https://m.me/radwan.romy.100" target="_blank" class="contact__button">
                                 Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bx-mail-send contact__card-icon'></i>
+                            <i class='bx bxl-whatsapp contact__card-icon' ></i>
                             <h3 class="contact__card-title">Whatsapp</h3>
                             <span class="contact__card-data">+8801717799111</span>
 
-                            <a href="" target="_blank" class="contact__button">
+                            <a href="https://api.whatsapp.com/send?phone=8801717799111&text=Hello, more information!" target="_blank" class="contact__button">
                                 Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
                             </a>
                         </div>
@@ -703,7 +703,7 @@
             </div>
         </section>
     </main>
-
+<br><br><br><br><br><br>
     <!--=============== FOOTER ===============-->
     <footer class="footer">
 
