--- a/index.html
+++ b/index.html
@@ -670,27 +670,28 @@
                             <span class="contact__card-data">user@gmail.com</span>
 
                             <a href="mailto:examplemail@correo.com" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-messenger contact__card-icon' ></i>
+                            <i class='bx bxl-messenger contact__card-icon'></i>
                             <h3 class="contact__card-title">Messenger</h3>
                             <span class="contact__card-data">Radwan Romy</span>
 
                             <a href="https://m.me/radwan.romy.100" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
 
                         <div class="contact__card">
-                            <i class='bx bxl-whatsapp contact__card-icon' ></i>
+                            <i class='bx bxl-whatsapp contact__card-icon'></i>
                             <h3 class="contact__card-title">Whatsapp</h3>
                             <span class="contact__card-data">+8801717799111</span>
 
-                            <a href="https://api.whatsapp.com/send?phone=8801717799111&text=Hello, more information!" target="_blank" class="contact__button">
-                                Write me <i class='bx bx-right-arrow-alt contact__button-icon' ></i>
+                            <a href="https://api.whatsapp.com/send?phone=8801717799111&text=Hello, more information!"
+                                target="_blank" class="contact__button">
+                                Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
                     </div>
@@ -698,12 +699,30 @@
                 <div class="contact__content">
                     <h3 class="contact__title">Write me your project</h3>
 
+                    <form action="" class="contact__form">
+                        <div class="contact__form-div">
+                            <label for="" class="contact__form-tag">Name</label>
+                            <input type="text" placeholder="Enter Your Name" class="contact__form-input">
+                        </div>
+
+                        <div class="contact__form-div">
+                            <label for="" class="contact__form-tag">Email</label>
+                            <input type="email" placeholder="Enter Your Email" class="contact__form-input">
+                        </div>
+
+                        <div class="contact__form-div">
+                            <label for="" class="contact__form-tag">Project</label>
+                            <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Project Details"
+                                class="contact__form-input"></textarea>
+                        </div>
+                        <button class="button">Send Message</button>
+                    </form>
 
                 </div>
             </div>
         </section>
     </main>
-<br><br><br><br><br><br>
+    <br><br><br><br><br><br>
     <!--=============== FOOTER ===============-->
     <footer class="footer">
 
