--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
                             <input type="email" placeholder="Enter Your Email" class="contact__form-input">
                         </div>
 
-                        <div class="contact__form-div">
+                        <div class="contact__form-div contact__form-area">
                             <label for="" class="contact__form-tag">Project</label>
                             <textarea name="" id="" cols="30" rows="10" placeholder="Write Your Project Details"
                                 class="contact__form-input"></textarea>
