--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
                             <h3 class="contact__card-title">Email</h3>
                             <span class="contact__card-data">user@gmail.com</span>
 
-                            <a href="mailto:examplemail@correo.com" target="_blank" class="contact__button">
+                            <a href="mailto:radwanromy@gmail.com" target="_blank" class="contact__button">
                                 Write me <i class='bx bx-right-arrow-alt contact__button-icon'></i>
                             </a>
                         </div>
