--- a/index.html
+++ b/index.html
@@ -726,6 +726,21 @@
     <br><br><br><br><br><br>
     <!--=============== FOOTER ===============-->
     <footer class="footer">
+        <div class="footer__container container">
+            <h1 class="footer__title">レードワン</h1>
+            <ul class="footer__list">
+                <li>
+                    <a href="#about" class="footer__link">About</a>
+                </li>
+                <li>
+                    <a href="#work" class="footer__link">Projects</a>
+                </li>
+                <li>
+                    <a href="#testimonial" class="footer__link">Testimonial</a>
+                </li>
+
+            </ul>
+        </div>
 
     </footer>
 
