--- a/index.html
+++ b/index.html
@@ -740,6 +740,29 @@
                 </li>
 
             </ul>
+            <ul class="footer__social">
+                <a href="https://www.facebook.com/radwan.romy.100/" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-facebook'></i>
+                </a>
+
+                <a href="https://www.instagram.com/radwanromy/" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-instagram'></i>
+                </a>
+
+                <a href="https://github.com/radwanromy" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-github'></i>
+                </a>
+
+
+                <a href="https://bd.linkedin.com/in/a-s-m-radwan-316597155/" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-linkedin-square'></i>
+                </a>
+
+
+                <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" target="_blank" class="footer__social-link">
+                    <i class='bx bxl-youtube'></i>
+                </a>
+            </ul>
         </div>
 
     </footer>
