--- a/index.html
+++ b/index.html
@@ -763,6 +763,11 @@
                     <i class='bx bxl-youtube'></i>
                 </a>
             </ul>
+
+            <span class="footer__copy">
+                All Rights Reserved & Copy 2022 - <a href="https://github.com/radwanromy">Radwan Romy</a>
+            </span>
+
         </div>
 
     </footer>
