--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 
                             <h3 class="services__model-tilte">フルスタック デベロッパー</h3>
                             <p class="services__model-description">
-                              <p></p>  現在、私はB-JETでソフトウェアエンジニアと日本語・ビジネス文化研修生として働いています。
+                            <p> 現在、私はB-JETでソフトウェアエンジニアと日本語・ビジネス文化研修生として働いています。
                                 以前は、ERA-InfoTech LtdというCMMIレベル3の会社でフルスタックデベロッパーとして働いていました。
                                 SpringBootとAngular13を使用したフルスタック開発の経験があります。
                                 SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker Service、E-payment、Stack
@@ -453,6 +453,7 @@
                                 彼はまた、Bank Asia Credit Card FundTransferSystemのライブプロジェクトにも貢献しています。
                                 要件にもよりますが、それで十分だと思います。
                                 私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。
+                            </p>
                             </p>
                             <ul class="services__model-list">
                                 <li class="services__model-item">
