--- a/index.html
+++ b/index.html
@@ -170,12 +170,10 @@
 
                     <p class="about__description">
 
-                        現在、私はCMMIレベル3の会社であるERA-InfoTechLtdでフルスタック開発者として働いています。
-                        SpringBootとAngular13を使用したフルスタック開発の経験があります。SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker
-                        Service、E-payment、Stack Overflowなどのブログアプリ）。彼はまた、Bank Asia Credit Card
-                        FundTransferSystemのライブプロジェクトにも貢献しています。要件にもよりますが、それで十分だと思います。私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。同封の履歴書に概説されているスキルと経験を考えると、あなたの組織から聞くことは価値のある資産になると思います。彼はバングラデシュのアメリカンインターナショナル大学で4年間で合計148単位を修了し、現在は新卒です。採用は私にとって素晴らしい機会です。大学のコースに加えて、AIUBComputerClubでウェブサイト開発者としてウェブサイトを開発しています。フルスタック開発のアップワークでもフリーランスをやっています。また、私はオンラインや大学外で非常に多くのコースを受講しました。
-                        python3、courser.orgのアルゴリズムを完了しました。これは不可欠であり、サイバーセキュリティとシスコネットワークアカデミーのモノのインターネットは、シスコ、Udemy、Solo-learn、およびUdacityに関するコースも実施しています。私はアプリケーションベースの管理ソフトウェアを持っています。私は、CSEの研究に関連するだけでなく、私の職業生活にも役立つ可能性のある多くの大きなプロジェクトを作成しました。私のソースフリーコードの一部が表示され、
-                        <a href="https://github.com/radwanromy">エー エス エム レードワン Github</a> で機能します。
+                        現在、私はB-JETでソフトウェアエンジニアと日本語・ビジネス文化研修生として働いています。
+ 以前は、ERA-InfoTech LtdというCMMIレベル3の会社でフルスタックデベロッパーとして働いていました。
+SpringBootとAngular13を使用したフルスタック開発の経験があります。 SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker Service、E-payment、Stack
+ Overflowなどのブログアプリ）。彼はまた、Bank Asia Credit Card FundTransferSystemのライブプロジェクトにも貢献しています。 要件にもよりますが、それで十分だと思います。 私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。  同封の履歴書に概説されているスキルと経験を考えると、あなたの組織から聞くことは価値のある資産になると思います。彼はバングラデシュのアメリカンインターナショナル大学で4年間で合計148単位を修了し、現在は新卒です。採用は私にとって素晴らしい機会です。大学のコースに加えて、AIUBComputerClubでウェブサイト開発者としてウェブサイトを開発しています。フルスタック開発のアップワークでもフリーランスをやっています。また、私はオンラインや大学外で非常に多くのコースを受講しました。 python3、courser.orgのアルゴリズムを完了しました。これは不可欠であり、サイバーセキュリティとシスコネットワークアカデミーのモノのインターネットは、シスコ、Udemy、Solo-learn、およびUdacityに関するコースも実施しています。私はアプリケーションベースの管理ソフトウェアを持っています。私は、CSEの研究に関連するだけでなく、私の職業生活にも役立つ可能性のある多くの大きなプロジェクトを作成しました。私のソースフリーコードの一部が表示され、<a href="https://github.com/radwanromy">エー エス エム レードワン Github</a> で機能します。
                     </p>
                     <a href="#contact" class="button">私に連絡して</a>
                 </div>
