--- a/index.html
+++ b/index.html
@@ -447,49 +447,44 @@
 
                             <h3 class="services__model-tilte">フルスタック デベロッパー</h3>
                             <p class="services__model-description">
-                                現在、私はB-JETでソフトウェアエンジニアと日本語・ビジネス文化研修生として働いています。
-                                以前は、ERA-InfoTech LtdというCMMIレベル3の会社でフルスタックデベロッパーとして働いていました。
-                                SpringBootとAngular13を使用したフルスタック開発の経験があります。
-                                SpringBootAngular13を使用して3つのプロジェクトに貢献しました（Bank Locker Service、E-payment、Stack
-                                Overflowなどのブログアプリ）。
-                                彼はまた、Bank Asia Credit Card FundTransferSystemのライブプロジェクトにも貢献しています。
-                                要件にもよりますが、それで十分だと思います。
-                                私の課外活動とコンピュータサイエンスのコースワークは、私がその仕事の従業員として成功することを可能にすると信じています。
-
+                                フルスタックデベロッパーツールとは、ウェブデベロッパーの幅広い責任に取り組みやすくするシステムやアプリケーションのことです。また、これらのツールを使用して、ダイナミックで機能的なウェブサイトやソフトウェアアプリケーションを作成することができます。Spring
+                                Boot(Java), Angular 13(TypeScript), Django(python), SQL, MySQL, PLSQL, Hibernate,
+                                Oracle、MVCパターンEntity Framework、Bootstrap、JavaScript、HTML、CSS、Web APIなど。
                             </p>
                             <ul class="services__model-list">
                                 <li class="services__model-item">
                                     <i class='bx bx-check services__model-icon'></i>
                                     <p class="services__model-info">
-                                        1 Ifullstack
+                                        1 フロントエンド（クライアントサイド）だけでなく、アプリケーションのバックエンド（サーバーサイド）にも携わります。
                                     </p>
                                 </li>
 
                                 <li class="services__model-item">
                                     <i class='bx bx-check services__model-icon'></i>
                                     <p class="services__model-info">
-                                        2 Ifullstack
+                                        2 データベースからグラフィックデザイン、UI/UX管理まで、幅広いコーディングのニッチに対応。
                                     </p>
                                 </li>
 
                                 <li class="services__model-item">
                                     <i class='bx bx-check services__model-icon'></i>
                                     <p class="services__model-info">
-                                        3 Ifullstack
+                                        3 Spring Boot(Java), Django(python), SQL, MySQL, PLSQL, Hibernate, Oracle
+                                        などのバックエンドフレームワーク。
                                     </p>
                                 </li>
 
                                 <li class="services__model-item">
                                     <i class='bx bx-check services__model-icon'></i>
                                     <p class="services__model-info">
-                                        4 Ifullstack
+                                        4 Angular 13(TypeScript)、Bootstrap、JavaScript、HTML、CSS、カスタムCSSなどのフロントエンドフレームワーク。
                                     </p>
                                 </li>
 
                                 <li class="services__model-item">
                                     <i class='bx bx-check services__model-icon'></i>
                                     <p class="services__model-info">
-                                        5 Ifullstack
+                                        5 フロントエンドとバックエンドの両方を開発するための柔軟なリソース。
                                     </p>
                                 </li>
                             </ul>
