--- a/index.html
+++ b/index.html
@@ -643,13 +643,13 @@
 
                     </div>
 
-                    <div class="testimonial__card swiper-slide">
+                    <!-- <div class="testimonial__card swiper-slide">
                         <img src="" alt="" class="testimonial__img">
                         <h3 class="testimonial__name">xyz</h3>
                         <p class="testimonial__description">XYZ
                         </p>
 
-                    </div>
+                    </div> -->
                 </div>
                 <div class="swiper-button-next"></div>
                 <div class="swiper-button-prev"></div>
