--- a/index.html
+++ b/index.html
@@ -585,6 +585,25 @@
                     </a>
                 </div>
 
+                <div class="work__card mix design">
+                    <img src="./assets/img/testimonial121.png" alt="" class="work__img">
+                    <h3 class="work__title">
+                        Maintainable Portal to use for School/College management system</h3>
+                    <a href=""
+                        class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
+
+                <div class="work__card mix web">
+                    <img src="./assets/img/w1321.png" alt="" class="work__img">
+                    <h3 class="work__title">
+                        React Front-End Web Design</h3>
+                    <a href="https://github.com/radwanromy/React-JS-2021-Repository"
+                        class="work__button">
+                        Demo <i class='bx bx-right-arrow-alt work__icon'></i>
+                    </a>
+                </div>
 
                 <div class="work__card mix web">
                     <img src="./assets/img/w9.png" alt="" class="work__img">
