--- a/index.html
+++ b/index.html
@@ -144,7 +144,18 @@
             <h2 class="section__title">私について</h2>
             <div class="about__container container grid">
                 <div align="center">
-                    <img src="assets/img/50805604.jfif" alt="" class="about__img" align="center">
+                    <!-- <object height="350" width="425" class="about__img">
+                        <param name="movie" value="https://youtu.be/jUARVMBWEts">
+                        <param name="wmode" value="transparent">
+                        <embed height="350" src="https://youtu.be/jUARVMBWEts?rel=0" type="application/x-shockwave-flash" width="425" wmode="transparent">
+                        </object> -->
+
+
+                    <iframe class="about__imgg" width="610" height="345" src="https://www.youtube.com/embed/jUARVMBWEts?loop=1">
+                    </iframe>
+
+                    <!-- <a href="https://youtu.be/jUARVMBWEts"></a> -->
+                    <!-- <img src="assets/img/50805604.jfif" alt="" class="about__img" align="center"> -->
                 </div>
 
                 <div class="about__data">
@@ -589,8 +600,7 @@
                     <img src="./assets/img/testimonial121.png" alt="" class="work__img">
                     <h3 class="work__title">
                         Maintainable Portal to use for School/College management system</h3>
-                    <a href=""
-                        class="work__button">
+                    <a href="" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
@@ -599,8 +609,7 @@
                     <img src="./assets/img/w1321.png" alt="" class="work__img">
                     <h3 class="work__title">
                         React Front-End Web Design</h3>
-                    <a href="https://github.com/radwanromy/React-JS-2021-Repository"
-                        class="work__button">
+                    <a href="https://github.com/radwanromy/React-JS-2021-Repository" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
                 </div>
