--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                         </object> -->
 
 
-                    <iframe class="about__imgg" width="610" height="345" src="https://www.youtube.com/embed/jUARVMBWEts?loop=1">
+                    <iframe class="about__imgg" width="610" height="345"
+                        src="https://www.youtube.com/embed/jUARVMBWEts?loop=1">
                     </iframe>
 
                     <!-- <a href="https://youtu.be/jUARVMBWEts"></a> -->
