--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                         </object> -->
 
 
-                    <iframe class="about__imgg" width="610" height="345"
+                    <iframe class="about__imgg" width="340" height="193"
                         src="https://www.youtube.com/embed/jUARVMBWEts?loop=0">
                     </iframe>
 
@@ -643,11 +643,10 @@
                                 href="https://www.crunchbase.com/person/vijay-koduri?fbclid=IwAR1pfAqjUTZKjmp9lEmneWeZMpuC19Dg9ZGps2Nvt_j3JHbkarDf8btQ5Fs">Vijay
                                 Koduri</a>,Co-Founder of <a
                                 href="https://www.crunchbase.com/organization/sizzle-a845">Sizzle</a> ,USA </h3>
-                        <p class="testimonial__description">本当に優秀なフリーランサーであり、プロジェクトのすべての側面が段階的に実行され、予想よりも優れた良い結果が得られました。
-                            A really good freelancer, All aspects pf the project were
+                        <p class="testimonial__description">本当に良いフリーランサー、プロジェクトのすべての側面は、ステップバイステップで、期待よりも優れている良い結果で続いていた。
+                            A really good freelancer, All aspects of the project were
                             followed step by step and with good result which is better than expectation.
                         </p>
-
                     </div>
 
                     <div class="testimonial__card swiper-slide">
