--- a/index.html
+++ b/index.html
@@ -107,25 +107,25 @@
                         class="home__img">
                 </div>
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/" class="home__social-link">
+                    <a href="https://www.linkedin.com/in/a-s-m-radwan-316597155/"  target="_blank" class="home__social-link">
                         <i class='bx bxl-linkedin-square'></i>
                     </a>
-                    <a href="https://github.com/radwanromy" class="home__social-link">
+                    <a href="https://github.com/radwanromy"  target="_blank" class="home__social-link">
                         <i class='bx bxl-github'></i>
                     </a>
-                    <a href="https://www.facebook.com/radwan.romy.100" class="home__social-link">
+                    <a href="https://www.facebook.com/radwan.romy.100"  target="_blank" class="home__social-link">
                         <i class='bx bxl-facebook-circle'></i>
                     </a>
-                    <a href="https://www.instagram.com/radwanromy" class="home__social-link">
+                    <a href="https://www.instagram.com/radwanromy"  target="_blank" class="home__social-link">
                         <i class='bx bxl-instagram-alt'></i>
                     </a>
-                    <a href="" class="home__social-link">
+                    <a href=""  target="_blank" class="home__social-link">
                         <i class='bx bxl-slack'></i>
                     </a>
-                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ" class="home__social-link">
+                    <a href="https://www.youtube.com/channel/UColDIGGLc7v6E4tZqDEzdXQ"  target="_blank" class="home__social-link">
                         <i class='bx bxl-youtube'></i>
                     </a>
-                    <a href="https://dribbble.com" class="home__social-link">
+                    <a href="https://dribbble.com"   target="_blank" class="home__social-link">
                         <i class='bx bxl-dribbble'></i>
                     </a>
 
