--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <div class="work__card mix design">
                     <img src="./assets/img/testimonial121.png" alt="" class="work__img">
                     <h3 class="work__title">
-                        Maintainable Portal to use for School/College management system</h3>
+                        Portal for School/College</h3>
                     <a href="" class="work__button">
                         Demo <i class='bx bx-right-arrow-alt work__icon'></i>
                     </a>
